# framework

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
